--- a/proj1/index.html
+++ b/proj1/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Newanky.in</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
+    <link href="style.css">
+>  </head>
   <body>
     <div class="container">
       <img
@@ -14,9 +15,13 @@
         src="https://pbs.twimg.com/media/EIwSM-HUEAAAKUk.jpg"
         alt=""
       />
-      <h1 class="counter">1000</h1>
+      <h1 class="counter"></h1>
       <p class="clients">Clients</p>
+      <p>visitors: <span class="visitors">10000</span></p>
     </div>
+
     <script src="script.js"></script>
+    <script>
+    </script>
   </body>
 </html>
