color changing project is done only using js

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Newanky.in</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="style.css">
->  </head>
+
+
+  </head>
   <body>
     <div class="container">
       <img
@@ -20,8 +21,8 @@
       <p>visitors: <span class="visitors">10000</span></p>
     </div>
 
+
     <script src="script.js"></script>
-    <script>
-    </script>
+    
   </body>
 </html>
