this keyword in js added

--- a/proj2final/index.html
+++ b/proj2final/index.html
@@ -17,7 +17,10 @@
       <div class="color pink"><center>Instagram</center></div>
       <div class="color blue"><center>Facebook</center></div>
     </div>
-    <div class="center"></div>
+    <div class="center">
+      <br><br><br><br><br><br>
+        <center>Newanky</center>
+    </div>
     <script src="./scripts.js"></script>
   </body>
 </html>
